<?xml version='1.0' encoding='utf-8'?>
<resources><string name="app_congrats_text">Congrats!!</string>

    <string name="analytics_consent_banner_action">Enable</string>
...
    <string name="color_picker_dialog_title">Select a Color</string>
    <string name="color_picker_negative_cta">Cancel</string>
    <string name="color_picker_positive_cta">Save</string>

    <string name="consent_dialog_cta">I Accept</string>
...

    <string name="create_lift_screen_title">Create Lift</string>
    <string name="create_set_screen_title">I Crushed</string>

    <string name="dashboard_empty_primary_cta_title">Create Category</string>
    <string name="dashboard_empty_secondary_cta_title">Restore a Backup</string>
    <string name="dashboard_empty_title">Do you even Lift Bro?</string>
    <string name="dashboard_fab_content_description">Add Set</string>
    <string name="dashboard_footer_leading_button_content_description">Dashboard</string>
    <string name="dashboard_footer_trailing_button_content_description">Calendar</string>
    <string name="dashboard_footer_version">Version: %1$s</string>
    <string name="dashboard_lift_header_title">Categories</string>
    <string name="dashboard_title">LIFT BRO</string>
    <string name="dashboard_toolbar_leading_button_content_description">Settings</string>
    <string name="dashboard_toolbar_trailing_button_content_description">Add Lift</string>

...
    <string name="edit_lift_info_dialog_text">A group of <b>Variations/Movements</b>\n\nex: A Squat can have many variations such as Front and Back Squat\n\nOnce you name your lift you can start creating Variations of that lift!\nThink of it as the "suffix" of a movement\n\nRomanian *Deadlift*\nFront *Squat*\nIncline *Bench Press*\n</string>
    <string name="edit_lift_info_dialog_title">What is a Lift?</string>
    <string name="edit_lift_screen_add_variation_cta_content_description">Add Variation</string>
    <string name="edit_lift_screen_delete_cta_content_description">Delete</string>
    <string name="edit_lift_screen_lift_name_placeholder">ex: Squat, Bench Press, Deadlift</string>
    <string name="edit_lift_screen_lift_warning_dialog_text">This will delete all variations and sets for this lift, This cannot be undone</string>
    <string name="edit_lift_screen_save_cta_content_description">Save Lift</string>
    <string name="edit_lift_screen_title">Edit Category</string>
    <string name="edit_lift_screen_variation_delete_cta_content_description">Delete Variation</string>
    <string name="edit_lift_screen_variation_name_placeholder">ex: Back, Front, Incline</string>
    <string name="edit_lift_screen_variation_warning_dialog_text">This will delete all sets for this variation. This cannot be undone</string>
    <string name="edit_lift_screen_warning_dialog_negative_cta">Nevermind</string>
    <string name="edit_lift_screen_warning_dialog_positive_cta">Okay!</string>
    <string name="edit_lift_screen_warning_dialog_title">Warning</string>
    <string name="edit_lift_variation_heading">Variations</string>
...
    <string name="edit_set_screen_delete_acc_label">Delete</string>
    <string name="edit_set_screen_encouragement">You got this!</string>
    <string name="edit_set_screen_extra_notes_label">Extra Notes: (optional)</string>
    <string name="edit_set_screen_extra_notes_placeholder">I killed it today!</string>
    <string name="edit_set_screen_save_cta_content_description">Save Set</string>
    <string name="edit_set_screen_title">You Crushed</string>
    <string name="edit_set_screen_variation_selector_empty_state_title">Whatcha Liftin?</string>
...
    <string name="lift_card_empty_title">No Sets!</string>
    <string name="lift_details_fab_content_description">Add Set</string>
    <string name="lift_details_screen_edit_content_description">Edit</string>
    <string name="lift_details_screen_empty_state_text">No variations yet. Tap + to add a set.</string>
    <string name="lift_details_screen_favourite_content_description">Favourite</string>
...

    <string name="onboarding_consent_screen_consent">I have read and agree to the %1$s and %2$s</string>
    <string name="onboarding_consent_screen_consent_checkbox_content_description">Consent</string>
    <string name="onboarding_consent_screen_subtitle">Did you read these?</string>
    <string name="onboarding_consent_screen_title">BEFORE WE GET STARTED</string>
    <string name="onboarding_leo_content_description">Lift Bro With Short Hair</string>
    <string name="onboarding_lisa_content_description">Lift Bro With A Ponytail</string>
    <string name="onboarding_page_one_cta">Continue</string>
    <string name="onboarding_page_one_title">CHOOSE\nYOUR\nLIFT BRO</string>
    <string name="onboarding_setup_screen_continue_cta">Continue</string>
...
    <string name="onboarding_setup_screen_select_uom_title">Select your preferred\nUnit of Measure</string>
    <string name="onboarding_setup_screen_title">LET'S GET STARTED</string>
    <string name="onboarding_skip_screen_continue_cta">🫡 Just put me in Coach!</string>
    <string name="onboarding_skip_screen_restore_cta">🦺 Restore from a Backup</string>
    <string name="onboarding_skip_screen_setup_cta">🙏 Help me setup things up!</string>
...
    <string name="onboarding_skip_screen_title">LET'S\nGOOOOO!</string>

    <string name="privacy_policy">Privacy Policy</string>

    <string name="radio_field_selected_option_text">Selected option</string>
...
    <string name="release_notes_dialog_title">Release Notes</string>
    <string name="release_notes_release_notes_close_content_description">Ignore Release Notes</string>
    <string name="release_notes_row_new_update_title">New Update Downloaded!</string>
    <string name="release_notes_row_tap_subtitle">Tap to see Release Notes</string>
    <string name="rep_weight_selector_info_p1">A Scale that can be used to track the effort used for a given set</string>
    <string name="rep_weight_selector_info_p2">Can be calculated based on the "Reps in Reserve", % of max weight, or Vibes!</string>
    <string name="rep_weight_selector_info_title">RPE:\nRate of Perceived Exertion</string>
    <string name="rep_weight_selector_rpe_placeholder">RPE</string>
    <string name="rep_weight_selector_table_col_percent">%</string>
...
    <string name="rep_weight_selector_table_rpe_9">9</string>
    <string name="rep_weight_selector_times_symbol">x</string>
    <string name="reps">reps</string>

    <string name="server_settings_row_current_ip">Current IP is %1$s</string>
...
    <string name="server_settings_row_title">Local Server</string>
    <string name="settings_backup_cta">Backup</string>
    <string name="settings_backup_restore_title">Backup / Restore</string>
    <string name="settings_become_pro_description">Sign up for an Ad free experience and extra premium tracking metrics!</string>
    <string name="settings_become_pro_title">Become Pro!</string>
...
    <string name="settings_user_id_label">User Id: %1$s</string>

    <string name="tempo_selector_con_title">Con (Up)</string>
    <string name="tempo_selector_concentric_examples">• picking up a deadlift\n• coming up from a squat\n• pushing the bar up in a bench press</string>
    <string name="tempo_selector_concentric_subtitle">Muscle Contraction</string>
...
    <string name="tempo_selector_ecc_examples">• putting a deadlift down\n• going into a squat\n• lowering the bar towards your chest in a bench press</string>
    <string name="tempo_selector_ecc_subtitle">Muscle Extension</string>
    <string name="tempo_selector_ecc_title">Ecc (Down)</string>
    <string name="tempo_selector_eccentric_examples">• putting a deadlift down\n• going into a squat\n• lowering the bar towards your chest in a bench press</string>
    <string name="tempo_selector_eccentric_subtitle">Muscle Extension</string>
    <string name="tempo_selector_eccentric_title">Eccentric - Ecc</string>
    <string name="tempo_selector_iso_title">Iso (Hold)</string>
