...
    PreviewAppTheme(isDarkMode = dark) {
        WrappedSummaryScreen(
            state = WrappedSummaryState(
                weight = WrappedSummaryWeightState(
                    totalWeightMoved = 269336.5,
                    heaviestVariationWeight = 9935.0,
                    heaviestVariationName = "Regular Deadlift",
                    numOfHeavyThings = 17.453,
                    heavyThing = heavyThings.random()

                ),
                reps = WrappedSummaryRepsState(
                    totalReps = 3302,
...
