...
import com.lift.bro.domain.models.Category
import com.lift.bro.domain.models.Movement

private val defaultSBDLifts = listOf(
    Category(
        id = uuid4().toString(),
        name = "Squat",
        color = null,
    ),
    Category(
        id = uuid4().toString(),
        name = "Press",
        color = null
    ),
    Category(
        id = uuid4().toString(),
        name = "Deadlift",
        color = null,
    ),
)

private val debugVariations = listOf(
    // squat variations
...
        lift = defaultSBDLifts.first { it.name == "Press" },
        name = "Military"
    ),
    // deadlift variations
    Movement(
        lift = defaultSBDLifts.first { it.name == "Deadlift" },
        name = "Sumo"
    ),
    Movement(
        lift = defaultSBDLifts.first { it.name == "Deadlift" },
        name = "Regular"
    ),
    Movement(
...
