...
import tv.dpal.flowvi.Interactor
import tv.dpal.ktx.datetime.atStartOfDayIn
import tv.dpal.ktx.datetime.toLocalDate
import kotlin.time.Instant

enum class RPE(
    val rpe: Int,
    val rir: Int,
    val percentMax: Float,
    val emoji: String,
) {
    Five(5, rir = 6, percentMax = .6f, "😇"),
    Six(6, rir = 4, percentMax = .75f, "😀"),
...
    val navCoordinator = LocalNavCoordinator.current
    var showVariationDialog by remember { mutableStateOf(false) }

    LiftingScaffold(
        title = {
            LookaheadScope {
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                ) {
                    var textLayoutResult by remember(state.failureRep) { mutableStateOf<TextLayoutResult?>(null) }
                    val titleCta by remember(
                        state.failureRep
                    ) { mutableStateOf(if (state.failureRep != null) "Attempted" else "Crushed") }
...
                    ) {
                        RepWeightSelector(
                            modifier = Modifier.fillMaxWidth(),
                            repChanged = { sendEvent(EditSetEvent.RepChanged(it)) },
                            weightChanged = { sendEvent(EditSetEvent.WeightChanged(it)) },
                            rpeChanged = { sendEvent(EditSetEvent.RpeChanged(it)) },
                            weight = state.weight,
                            reps = state.reps,
                            rpe = state.rpe,
                            showRpe = false
                        )

                        AnimatedVisibility(
...
            EditSetState(
                id = "",
                movement = EditSetMovementState.Known(
                    SetVariation(
                        Movement(
                            lift = Category(
                                name = "Squat",
                                color = 0xFF2196F3uL
                            ),
                            name = "Back Squat"
                        )
                    )
                ),
...
            EditSetState(
                id = "set2",
                movement = EditSetMovementState.Known(
                    SetVariation(
                        Movement(
                            lift = Category(
                                name = "Deadlift",
                                color = 0xFFFF5722uL
                            ),
                            name = "Conventional"
                        ),
                        variationMaxPercentage = EditSetMaxPercentageState(
                            percentage = 95,
                            variationName = "Conventional Deadlift"
                        ),
                        liftMaxPercentage = EditSetMaxPercentageState(
                            percentage = 90,
                            variationName = "Deadlift"
                        )
                    )
...
