...
                SubmitTextField(
                    value = name,
                    onValueSubmitted = {
                        interactor(MovementDetailsEvent.UpdateMovement.NameUpdated(it))
                    },
                    placeholder = {
                        Text("Create Movement")
                    }
                )
                if (state.movement.name != null) {
                    CategoryDropDown(
                        selectedCategory = state.movement.lift,
                        categoryChanged = {
...
