appId: com.lift.bro
---
- runFlow:
      file: flows/skip_onboarding_with_backup.yaml

- tapOn: "Deadlift"
- tapOn: "Edit"
- tapOn: "Delete Variation"

- tapOn: "Okay!"

- assertNotVisible: "Sumo"

- tapOn: "Add Variation"
- inputText: "Wacky"

- tapOn: "Save Lift"

- scrollUntilVisible: "Wacky Deadlift"