appId: com.lift.bro
---
- runFlow:
    file: flows/skip_onboarding_with_backup.yaml

- tapOn: "Deadlift"
- tapOn: "Edit"
- tapOn: "Delete Variation"

- tapOn: "Okay!"

- assertNotVisible: "Deadlift"

- tapOn: "Add Variation"
- inputText: "Wacky"

- tapOn: "Back"

- scrollUntilVisible:
    element:
      text: "Wacky Deadlift"

- assertNotVisible: "Wacky Deadlift"
